# bincode-k8s-repro

./: Cargo.toml
src/: blobs.rs  main.rs
