[package]
name = "bincode-k8s-repro"
version = "0.1.0"
authors = ["Rick Richardson <rick.richardson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
k8s-openapi = { version="0.11.0", features=["v1_18"] }
serde = "1.0.125"
serde_json = "1.0.64"
